Continue rework&cleanup

--- a/html/index.html
+++ b/html/index.html
@@ -367,7 +367,7 @@ $('document').ready(function() {
 
             <!-- PEDALBOARD-SETTINGS -->
             <div id="pedalboard-info">
-                <div class="title">{{title2}}</div>
+                <div class="title">{{fulltitle}}</div>
                 <!-- <div class="favorite"></div> -->
                 <div class="actions">
                     <button class="js-add-midi btn btn-mini btn-warning">Add MIDI Device</button>
