Automatically enable mod-app integration from the start

--- a/html/index.html
+++ b/html/index.html
@@ -136,6 +136,10 @@ $('document').ready(function() {
       desktop.pedalboardSavable  = true
   }
 
+  if ({{using_app}}) {
+      desktop.setupApp({{using_desktop}})
+  }
+
   $.ajax({
       url: '/system/info',
       method: 'GET',
