created folder for less files

--- a/html/index.html
+++ b/html/index.html
@@ -817,11 +817,12 @@ $('document').ready(function() {
                           Register
                       </a>
                   </li>
-                  <li>
-                      <a ng-click="modalLogin()">
+                  <li class="login">
+                      <a id="login">
                           Login
                       </a>
                   </li>
+                  <li class="logout"><a id="logout">Logout</a></li>
                   </ul>
               </div>
               </div>
