--- a/html/index.html
+++ b/html/index.html
@@ -238,14 +238,15 @@ $('document').ready(function() {
                     <form class="bottom">
                         <div class="form-group">
                             <label>User ID</label>
-                                <input type="text" class="form-control" name="user_id" value=""/>
+                                <input type="text" class="form-control" name="user_id" value="" />
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                                <input type="password" class="form-control" name="password" value=""/>
+                                <input type="password" class="form-control" name="password" value="" />
                         </div>
-                        <div class="form-group">                            
-                            <input type="submit" class="form-control btn btn-info"/>
+                        <div class="form-group">    
+                            <a class="js-close btn btn-default"/>Cancel</a>
+                            <input type="submit" class="btn btn-primary" />                            
                         </div>
                     </form>
                 </div>
@@ -511,7 +512,7 @@ $('document').ready(function() {
         <div class="box clearfix">
             <header>
                 <h1 class="bottom top">
-                    Cloud Plugins
+                    PLUGIN STORE
                     <!-- <span class="help"></span> -->
                 </h1>
                 <!-- <span class="close btn btn-danger js-close">Close</span> -->
