cloudplugin.js extracted from effects.js

--- a/html/index.html
+++ b/html/index.html
@@ -167,6 +167,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/desktop.js?v={{version}}"></script>
 <script type="text/javascript" src="js/pedalboard.js?v={{version}}"></script>
 <script type="text/javascript" src="js/pedalboards.js?v={{version}}"></script>
+<script type="text/javascript" src="js/cloudplugin.js?v={{version}}"></script>
 <script type="text/javascript" src="js/effects.js?v={{version}}"></script>
 <script type="text/javascript" src="js/login.js?v={{version}}"></script>
 <script type="text/javascript" src="js/mididevices.js?v={{version}}"></script>
@@ -549,7 +550,7 @@ $('document').ready(function() {
                 <!-- EFFECTS OF A CATEGORY -->
                 <div id="cloudplugin-results-wrapper">
                     <div id="cloud-plugin-content-All" class="plugins-wrapper"></div>
-                    <div id="cloud-plugin-content-Delay" class="plugins-wrapper"></div>
+                    <div id="cloud-plugin-content-Delay" class="plugins-wrapper">gags</div>
                     <div id="cloud-plugin-content-Distortion" class="plugins-wrapper"></div>
                     <div id="cloud-plugin-content-Dynamics" class="plugins-wrapper"></div>
                     <div id="cloud-plugin-content-Filter" class="plugins-wrapper"></div>
