fix for cpu-load bar

--- a/html/index.html
+++ b/html/index.html
@@ -436,8 +436,8 @@ $('document').ready(function() {
         <div id="mod-bluetooth" class="icon"></div>
         <div id="mod-cloud" class="icon"></div>
         <div id="mod-cpu" class="icon">
-          <div class="progress">
-            <div class="bar" id="cpu-bar" style="width: 80%;"></div>
+          <div class="progress" id="cpu-bar">
+            <div class="bar" style="width: 80%;"></div> <!-- not sure if this is needed -->
           </div>
           <p class="progress-title" id="cpu-bar-text">
             cpu
