removed ping from ajax loading bar

--- a/html/index.html
+++ b/html/index.html
@@ -201,7 +201,7 @@ $('document').ready(function() {
 <body class="mod-dark">
   <!-- NOTIFICATIONS -->
 
-  <div id="notifications mod-hidden"></div>
+  <div id="notifications" class="mod-hidden"></div>
   <!-- END NOTIFICATIONS -->
     <!-- WRAPPER -->
     <div id="wrapper">
@@ -557,9 +557,8 @@ $('document').ready(function() {
                     <li id="cloud-plugin-tab-Spectral">Spectral</li>
                     <li id="cloud-plugin-tab-Utility">Utility</li>
                 </ul>
-                <h2>Filter:</h2>
                 <div class="form-group">
-                    <input class="form-control" placeholder="Keyword" type="search"/>
+                    <input class="form-control" placeholder="Filter by keyword" type="search"/>
                 </div>
 
             </div>
