Fix tooltop opacity value

--- a/html/index.html
+++ b/html/index.html
@@ -867,7 +867,7 @@ $('document').ready(function() {
 </div>
     <!-- END WRAPPER -->
     <!-- MOD UPDATE/UPGRADE TOOLTIP -->
-<div class="tooltip mod-hidden" style="opacity:1;right:102px;">
+<div class="tooltip mod-hidden" style="right:102px;">
     <div class="arrow"></div>
     <div class="text">New updates are available. Click to upgrade.</div>
 </div>
