--- a/html/index.html
+++ b/html/index.html
@@ -540,11 +540,11 @@ $('document').ready(function() {
                     <label for="cloud-plugins-all">All</label>
                     <input type="radio" name="installed" value="installed" id="cloud-plugins-installed" />
                     <label for="cloud-plugins-installed">Installed</label>
-                    <input type="radio" name="installed" value="not-installed" id="cloud-plugins-uninstalled" />
-                    <label for="cloud-plugins-uninstalled">Not Installed</label>
+                    <!-- <input type="radio" name="installed" value="not-installed" id="cloud-plugins-uninstalled" />
+                    <label for="cloud-plugins-uninstalled">Not Installed</label> -->
                 </div>
                 <ul class="categories pull-left list list-unstyled">
-                    <!-- <li id="cloud-plugin-tab-All">All</li> -->
+                    <li id="cloud-plugin-tab-All">All</li>
                     <li id="cloud-plugin-tab-Delay">Delay</li>
                     <li id="cloud-plugin-tab-Distortion">Distortion</li>
                     <li id="cloud-plugin-tab-Dynamics">Dynamics</li>
