misc adjustments/improvements on constructor

--- a/html/index.html
+++ b/html/index.html
@@ -488,10 +488,8 @@ $('document').ready(function() {
         <div id="plugins-library-settings-window">
             <form class="box form-inline">
                 <h1>Plugin Search</h1>
-                <div class="control-group">
-                    <label>Keywords</label>
-                    <br/>
-                    <input type="search"/>
+                <div class="form-group">
+                    <input class="form-control" placeholder="Keyword(s)" type="search"/>
                 </div>
             </form>
         </div>
