--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -16,7 +16,7 @@
             {{#effect.ports.control.input}}
             {{#enumeration}}
             <div class="mod-enumerated">
-                <span class="mod-enumerated-title">{{shortname}}</span>
+                <span class="mod-enumerated-title">{{shortName}}</span>
                 <div class="mod-address" mod-role="input-control-address" mod-port-symbol="{{symbol}}"></div>
                 <div class="mod-enumerated-list" mod-role="input-control-port" mod-port-symbol="{{symbol}}" mod-widget="custom-select">
                     {{#scalePoints}}
@@ -29,7 +29,7 @@
                 {{^trigger}}
                     {{^toggled}}
                     <div class="mod-knob">
-                        <span class="mod-knob-title">{{shortname}}</span>
+                        <span class="mod-knob-title">{{shortName}}</span>
                         <span class="mod-knob-min-value" mod-role="input-control-minimum" mod-port-symbol="{{symbol}}"></span>
                         <span class="mod-knob-max-value" mod-role="input-control-maximum" mod-port-symbol="{{symbol}}"></span>
                         <span class="mod-knob-current-value" mod-role="input-control-value" mod-port-symbol="{{symbol}}"></span>
@@ -39,7 +39,7 @@
                     {{/toggled}}
                     {{#toggled}}
                     <div class="mod-switch">
-                        <span class="mod-switch-title">{{shortname}}</span>
+                        <span class="mod-switch-title">{{shortName}}</span>
                         <div class="mod-switch-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}" mod-widget="film"></div>
                         <div class="mod-address" mod-role="input-control-address" mod-port-symbol="{{symbol}}"></div>
                     </div>
@@ -47,7 +47,7 @@
                 {{/trigger}}
                 {{#trigger}}
                 <div class="mod-switch">
-                    <span class="mod-switch-title">{{shortname}}</span>
+                    <span class="mod-switch-title">{{shortName}}</span>
                     <div class="mod-footswitch-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}" mod-widget="film"></div>
                     <div class="mod-address" mod-role="input-control-address" mod-port-symbol="{{symbol}}"></div>
                 </div>
