Fix PB screenshot, updated to final structure

--- a/html/pedalboard.html
+++ b/html/pedalboard.html
@@ -51,7 +51,7 @@
              }
           })
           //console.log(PEDALBOARD_DATA)
-          el.pedalboard('unserialize', PEDALBOARD_DATA)
+          el.pedalboard('fakeLoadFromServerData', PEDALBOARD_DATA)
       })
 
     </script>
@@ -72,6 +72,7 @@
     <script type="text/javascript" src="js/login.js"></script>
     <script type="text/javascript" src="js/hardware.js"></script>
     <script type="text/javascript" src="js/xrun.js"></script>
+    <script type="text/javascript" src="js/presets.js"></script>
 
     <style type="text/css" media="screen">
     body {
