clicking on constructor search will focus the input

--- a/html/index.html
+++ b/html/index.html
@@ -489,7 +489,7 @@ $('document').ready(function() {
             <form class="box form-inline">
                 <h1>Plugin Search</h1>
                 <div class="form-group">
-                    <input class="form-control" placeholder="Keyword(s)" type="search"/>
+                    <input id="effectSearch" class="form-control" placeholder="Keyword(s)" type="search"/>
                 </div>
             </form>
         </div>
