Fixup some bank stuff

--- a/html/index.html
+++ b/html/index.html
@@ -674,8 +674,10 @@ $('document').ready(function() {
                 </div>
             -->
             <div id="bank-addressings" class="mod-hidden">
-	      <h2>Bank addressings:</h2>
-	      <small>Select footswitch functionality for this bank. Pedalboard footswitches will be overriden.</small>
+              <h1>Untitled</h1>
+              <!--
+              <h2>Bank addressings:</h2>
+              <small>Select footswitch functionality for this bank. Pedalboard footswitches will be overriden.</small>
                 <select name="foot-0">
                   <option value="0">Free</option>
                   <option value="2">Next pedalboard</option>
@@ -696,6 +698,7 @@ $('document').ready(function() {
                   <option value="2">Next pedalboard</option>
                   <option value="3">Previous pedalboard</option>
               </select>
+              -->
           </div>
           <div id="bank-pedalboards" class="grid-selected">
           </div>
