Fix icon and screenshot with the last change

--- a/html/icon.html
+++ b/html/icon.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js"></script>
 
     <script type="text/javascript">
+      var desktop    = null
       var icongui    = null
       var SAMPLERATE = 48000
 
