--- a/html/pedalboard.html
+++ b/html/pedalboard.html
@@ -36,6 +36,8 @@
       var AUTO_CLOUD_BACKUP = false
       var SAMPLERATE        = 48000
 
+      var desktop = null
+
       $('document').ready(function() {
           var el = $('#pedalboard-dashboard').pedalboard({
              baseScale: 1,
