--- a/html/index.html
+++ b/html/index.html
@@ -680,6 +680,14 @@ $('document').ready(function() {
                   <span class="list"></span>
                 </div>
             -->
+          <div style="
+          position: absolute;
+          display: block;
+          background-color: #111;
+          height: 100%;
+          width: 80%;
+          bottom: 0;
+          left: 19.95%;">
             <div id="bank-addressings" class="mod-hidden">
               <h1>Untitled</h1>
               <!--
@@ -709,6 +717,7 @@ $('document').ready(function() {
           </div>
           <div id="bank-pedalboards" class="grid-selected">
           </div>
+        </div>
           <!-- END BANK-PEDALBOARDS -->
 
           <!-- BANK-PEDALBOARDS-SEARCH -->
