added a separate js file for banks; minor optimizations

--- a/html/index.html
+++ b/html/index.html
@@ -180,6 +180,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/desktop.js?v={{version}}"></script>
 <script type="text/javascript" src="js/pedalboard.js?v={{version}}"></script>
 <script type="text/javascript" src="js/pedalboards.js?v={{version}}"></script>
+<script type="text/javascript" src="js/banks.js?v={{version}}"></script>
 <script type="text/javascript" src="js/cloudplugin.js?v={{version}}"></script>
 <script type="text/javascript" src="js/effects.js?v={{version}}"></script>
 <script type="text/javascript" src="js/login.js?v={{version}}"></script>
@@ -680,14 +681,7 @@ $('document').ready(function() {
                   <span class="list"></span>
                 </div>
             -->
-          <div style="
-          position: absolute;
-          display: block;
-          background-color: #111;
-          height: 100%;
-          width: 80%;
-          bottom: 0;
-          left: 19.95%;">
+          <div id="bank-edit">
             <div id="bank-addressings" class="mod-hidden">
               <h1>Untitled</h1>
               <!--
